--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -8,11 +8,14 @@ on:
 
 jobs:
   terraform:
+    environment: Production
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev'  # Optional, for clarity
 
     env:
-      TF_VERSION: 1.12.2  # specify your terraform version
+      TF_VERSION: 1.12.2\
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }} 
 
     steps:
       - name: Checkout repository
@@ -24,12 +27,7 @@ jobs:
           terraform_version: ${{ env.TF_VERSION }}
 
       - name: Initialize and apply Terraform in multiple folders
-        env:
-          TF_VERSION: 1.12.2  # specify your terraform version
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
-          echo $AWS_SECRET_ACCESS_KEY_ID
           # Define your folders, e.g., "infra/network" and "infra/apps"
           TERRAFORM_FOLDERS=(
             "terraform-ecs"
