--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -7,18 +7,14 @@ jobs:
   build-and-push:
     environment: Production
     runs-on: ubuntu-latest
-
     permissions:
       contents: read
-      # Allow write permissions for creating tags and pushing images
       id-token: write
+
     env:
-      TF_VERSION: 1.12.2
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }} 
       AWS_REGION: ${{ vars.AWS_REGION }}
       REPOSITORY: fusion
-      IMAGE_TAG: LATEST
+      ECR_REPO_URI: 471230323408.dkr.ecr.us-west-2.amazonaws.com/fusion
 
     steps:
       - name: Checkout repository
@@ -29,24 +25,23 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ vars.AWS_REGION }}  # e.g., us-east-1
+          aws-region: ${{ env.AWS_REGION }}
 
       - name: Login to Amazon ECR
-        id: ecr-login
         uses: aws-actions/amazon-ecr-login@v1
 
       - name: Build Docker Image
+        id: build_image
         run: |
-          cd docker
-          docker build -t $IMAGE_TAG .
-          echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_OUTPUT
+          cd docker  # Remove if Dockerfile is in root
+          IMAGE_TAG=${{ github.repository }}:${{ github.sha }}
+          docker build -t $ECR_REPO_URI:$IMAGE_TAG .
+          echo "image_tag=$IMAGE_TAG" >> $GITHUB_OUTPUT
 
       - name: Tag Docker Image for ECR
         run: |
-          ECR_URI=$(aws ecr describe-repositories --repository-names $REPOSITORY --region $AWS_REGION --output text --query 'repositories[0].repositoryUri')
-          docker tag $IMAGE_TAG $ECR_URI:$GITHUB_SHA
+          docker tag $ECR_REPO_URI:$IMAGE_TAG $ECR_REPO_URI:${{ github.sha }}
 
       - name: Push Docker Image to ECR
         run: |
-          ECR_URI=$(aws ecr describe-repositories --repository-names $REPOSITORY --region $AWS_REGION --output text --query 'repositories[0].repositoryUri')
-          docker push $ECR_URI:$GITHUB_SHA
+          docker push $ECR_REPO_URI:${{ github.sha }}
