--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -40,8 +40,10 @@ jobs:
 
       - name: Tag Docker Image for ECR
         run: |
-          docker tag $ECR_REPO_URI:latest $ECR_REPO_URI:${{ github.sha }}
+          docker tag $ECR_REPO_URI:${{ github.sha }}  $ECR_REPO_URI:latest
 
       - name: Push Docker Image to ECR
         run: |
           docker push $ECR_REPO_URI:${{ github.sha }}
+          docker push $ECR_REPO_URI:latest
+
