--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -2,9 +2,6 @@ name: Terraform Deployment
 
 on:
   push:
-    branches:
-      - dev
-      - main
 
 jobs:
   terraform:
@@ -13,7 +10,7 @@ jobs:
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev'  # Optional, for clarity
 
     env:
-      TF_VERSION: 1.12.2\
+      TF_VERSION: 1.12.2
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }} 
 
@@ -30,7 +27,7 @@ jobs:
         run: |
           # Define your folders, e.g., "infra/network" and "infra/apps"
           TERRAFORM_FOLDERS=(
-            "terraform-ecs"
+            "terraform-ecr"
             # add more folders as needed
           )
 
@@ -50,5 +47,9 @@ jobs:
               # Apply only if on main
               terraform apply -input=false -auto-approve tfplan
             fi
+            if [ "${{ github.ref }}" == "refs/heads/destroy" ]; then
+              terraform destroy -auto-approve
+            fi
+            
             cd -  # Return to root
           done
