Add ECS terraform (#3)
* update docker workflow

* vibe coding at this point

* fix docker tag command

* fix docker tag command

* fix docker tag command

* moving state files around that i misnamed

* moving state files around that i misnamed

* tf on dev or main branches

* trying to migrate state

* first pass at ecs

* first pass at ecs

* fix more merge conflicts

* fumpt and add fumpt check in pipeline

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -2,6 +2,26 @@ name: Terraform Deployment
 
 on:
   push:
+    branches:
+      - dev
+      - main
+      - feature/*
+  workflow_dispatch:
+    inputs:
+      environment:
+        description: 'Environment to deploy to'
+        required: true
+        default: 'production'
+      destroy:
+        description: 'destroy'
+        type: 'boolean'
+        required: false
+        default: false
+      migrate-state:
+        description: 'migrate state file during init'
+        type: 'boolean'
+        required: false
+        default: false
 
 jobs:
   terraform:
@@ -23,11 +43,16 @@ jobs:
         with:
           terraform_version: ${{ env.TF_VERSION }}
 
+          
       - name: Initialize and apply Terraform in multiple folders
         run: |
+          # TF Lint
+          terraform fmt -recursive
+          terraform fmt -recursive -check
           # Define your folders, e.g., "infra/network" and "infra/apps"
           TERRAFORM_FOLDERS=(
             "terraform-ecr"
+            "terraform-ecs"
             # add more folders as needed
           )
 
@@ -37,7 +62,11 @@ jobs:
             cd "$folder"
 
             # Initialize Terraform
-            terraform init -input=false
+            MIGRATE=''
+            if [ "${{ github.event.inputs.migrate-state }}" == "true" ]; then
+              MIGRATE='-migrate-state'
+            fi
+            terraform init -input=false $MIGRATE
 
             # Plan to review before apply (optional)
             terraform plan -out=tfplan -input=false
@@ -47,7 +76,7 @@ jobs:
               # Apply only if on main
               terraform apply -input=false -auto-approve tfplan
             fi
-            if [ "${{ github.ref }}" == "refs/heads/destroy" ]; then
+            if [ "${{ github.event.inputs.destroy }}" == "true" ]; then
               terraform destroy -auto-approve
             fi
             
