--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -49,9 +49,14 @@ jobs:
         else
           echo "exists=false" >> $GITHUB_OUTPUT
         fi
+        echo "$GITHUB_OUTPUT"
   deploy-ecr:
     needs: check-ecr
     environment: Production
+    env:
+      TF_VERSION: 1.12.2
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     runs-on: ubuntu-latest
     if: needs.check-ecr.outputs.ecr_exists == 'false'
 
@@ -62,7 +67,7 @@ jobs:
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
         with:
-          terraform_version: 1.12.2
+          terraform_version: ${{ env.TF_VERSION }}
           
       - name: Terraform Init
         run: terraform init
