rewriting pipeline to deploy container to ecr and only deploy ecs if container and ecr are deployed

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -2,7 +2,12 @@ name: Build and Push Docker Image to AWS ECR
 
 on:
   workflow_call:
-  workflow_dispatch:
+    inputs:
+      destroy:
+        description: 'destroy'
+        type: 'boolean'
+        required: false
+        default: false
     
 
 jobs:
