--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -89,12 +89,9 @@ jobs:
         working-directory: ./terraform-ecr
 
   call-docker-workflow:
-    needs: [check-ecr, deploy-ecr]
-    if: needs.check-ecr.outputs.ecr_exists == 'false'
-    runs-on: ubuntu-latest
-    steps:
-    - name: Trigger Docker Workflow
-      uses: ./.github/workflows/docker.yml@dev
+      needs: [check-ecr, deploy-ecr]
+      if: needs.check-ecr.outputs.ecr_exists == 'false'
+      uses: ./.github/workflows/docker.yml
          
   deploy-ecs:
     needs: [check-ecr, deploy-ecr, call-docker-workflow]
