--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -92,6 +92,8 @@ jobs:
       needs: [check-ecr, deploy-ecr]
       if: needs.check-ecr.outputs.ecr_exists == 'false'
       uses: ./.github/workflows/docker.yml
+      with: 
+        destroy: false
          
   deploy-ecs:
     needs: [check-ecr, deploy-ecr, call-docker-workflow]
