--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -52,43 +52,43 @@ jobs:
           echo "exists=false" >> $GITHUB_OUTPUT
         fi
         echo "$GITHUB_OUTPUT"
-  # deploy-ecr:
-  #   needs: check-ecr
-  #   environment: Production
-  #   env:
-  #     TF_VERSION: 1.12.2
-  #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  #   runs-on: ubuntu-latest
-  #   if: needs.check-ecr.outputs.ecr_exists == 'false'
+  deploy-ecr:
+    needs: check-ecr
+    environment: Production
+    env:
+      TF_VERSION: 1.12.2
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    runs-on: ubuntu-latest
+    if: needs.check-ecr.outputs.ecr_exists == 'false'
 
-  #   steps:
-  #     - name: Checkout repository
-  #       uses: actions/checkout@v3
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-  #     - name: Set up Terraform
-  #       uses: hashicorp/setup-terraform@v2
-  #       with:
-  #         terraform_version: ${{ env.TF_VERSION }}
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: ${{ env.TF_VERSION }}
           
-  #     - name: Terraform Init
-  #       run: terraform init
-  #       working-directory: ./terraform-ecr
+      - name: Terraform Init
+        run: terraform init
+        working-directory: ./terraform-ecr
 
-  #     - name: Terraform Apply
-  #       run: |
-  #         # Plan to review before apply (optional)
-  #         terraform plan -out=tfplan -input=false
+      - name: Terraform Apply
+        run: |
+          # Plan to review before apply (optional)
+          terraform plan -out=tfplan -input=false
           
-  #         # If on main branch, run apply
-  #         if [ "${{ github.ref }}" == "refs/heads/main" ]; then
-  #           # Apply only if on main
-  #           terraform apply -input=false -auto-approve tfplan
-  #         fi
-  #         if [ "$DESTROY" == "true" ]; then
-  #           terraform destroy -auto-approve
-  #         fi
-  #       working-directory: ./terraform-ecr
+          # If on main branch, run apply
+          if [ "${{ github.ref }}" == "refs/heads/main" ]; then
+            # Apply only if on main
+            terraform apply -input=false -auto-approve tfplan
+          fi
+          if [ "$DESTROY" == "true" ]; then
+            terraform destroy -auto-approve
+          fi
+        working-directory: ./terraform-ecr
 
   # call-docker-workflow:
   #     needs: [check-ecr, deploy-ecr]
