--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -90,12 +90,12 @@ jobs:
           fi
         working-directory: ./terraform-ecr
 
-  # call-docker-workflow:
-  #     needs: [check-ecr, deploy-ecr]
-  #     if: needs.check-ecr.outputs.ecr_exists == 'false'
-  #     uses: ./.github/workflows/docker.yml
-  #     with: 
-  #       destroy: false
+  call-docker-workflow:
+      needs: [check-ecr, deploy-ecr]
+      if: needs.check-ecr.outputs.ecr_exists == 'false'
+      uses: ./.github/workflows/docker.yml
+      with: 
+        destroy: false
          
   # deploy-ecs:
   #   needs: [check-ecr, deploy-ecr, call-docker-workflow]
