Add reusable workflow to deploy docker image to ECR after successful ECR deployment (#4)
* update docker workflow

* vibe coding at this point

* fix docker tag command

* fix docker tag command

* fix docker tag command

* moving state files around that i misnamed

* moving state files around that i misnamed

* tf on dev or main branches

* trying to migrate state

* first pass at ecs

* first pass at ecs

* fix more merge conflicts

* fumpt and add fumpt check in pipeline

* fix vpcid reference in ecs sg

* add ability to deploy ONE tf folder in a manual run

* add ability to deploy ONE tf folder in a manual run

* add ability to deploy ONE tf folder in a manual run

* add ability to deploy ONE tf folder in a manual run

* add ability to deploy ONE tf folder in a manual run

* add ability to deploy ONE tf folder in a manual run

* messing around with pipeline params

* messing around with pipeline params

* messing around with pipeline params

* rewriting pipeline to deploy container to ecr and only deploy ecs if container and ecr are deployed

* rewriting pipeline to deploy container to ecr and only deploy ecs if container and ecr are deployed

* rewriting pipeline to deploy container to ecr and only deploy ecs if container and ecr are deployed

* rewriting pipeline to deploy container to ecr and only deploy ecs if container and ecr are deployed

* rewriting pipeline to deploy container to ecr and only deploy ecs if container and ecr are deployed

* rewriting pipeline to deploy container to ecr and only deploy ecs if container and ecr are deployed

* rewriting pipeline to deploy container to ecr and only deploy ecs if container and ecr are deployed

* rewriting pipeline to deploy container to ecr and only deploy ecs if container and ecr are deployed

* rewriting pipeline to deploy container to ecr and only deploy ecs if container and ecr are deployed

* trying to get reusable workflow working

* trying to get reusable workflow working

* trying to get reusable wo

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,7 +1,14 @@
 name: Build and Push Docker Image to AWS ECR
 
 on:
-  workflow_dispatch:
+  workflow_call:
+    inputs:
+      destroy:
+        description: 'destroy'
+        type: 'boolean'
+        required: false
+        default: false
+    
 
 jobs:
   build-and-push:
@@ -9,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      id-token: write
+      # id-token: write
 
     env:
       AWS_REGION: ${{ vars.AWS_REGION }}
@@ -44,6 +51,8 @@ jobs:
 
       - name: Push Docker Image to ECR
         run: |
-          docker push $ECR_REPO_URI:${{ github.sha }}
-          docker push $ECR_REPO_URI:latest
+          if [ "${{ github.ref }}" == "refs/heads/main" ]; then
+            docker push $ECR_REPO_URI:${{ github.sha }}
+            docker push $ECR_REPO_URI:latest
+          fi
 
