--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -21,6 +21,11 @@ on:
         type: 'boolean'
         required: false
         default: false
+      build_image:
+        description: 'build docker image on manual runs'
+        type: 'boolean'
+        required: false
+        default: false
       migrate-state:
         description: 'migrate state file during init'
         type: 'boolean'
@@ -60,6 +65,7 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     runs-on: ubuntu-latest'
+    needs: [check-ecr]
 
     steps:
       - name: Checkout repository
@@ -91,7 +97,7 @@ jobs:
 
   call-docker-workflow:
       needs: [check-ecr]
-      if: needs.check-ecr.outputs.ecr_exists == 'false'
+      if: needs.check-ecr.outputs.ecr_exists == 'false' ||  ${{ inputs.build_image }} == 'true'
       uses: ./.github/workflows/docker.yml
       secrets: inherit
       with: 
