--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -21,6 +21,11 @@ on:
         type: 'boolean'
         required: false
         default: false
+      build_image:
+        description: 'build docker image on manual runs'
+        type: 'boolean'
+        required: false
+        default: false
       migrate-state:
         description: 'migrate state file during init'
         type: 'boolean'
@@ -52,15 +57,15 @@ jobs:
           echo "exists=false" >> $GITHUB_OUTPUT
         fi
         echo "$GITHUB_OUTPUT"
+  
   deploy-ecr:
-    needs: check-ecr
     environment: Production
     env:
       TF_VERSION: 1.12.2
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-    runs-on: ubuntu-latest
-    if: needs.check-ecr.outputs.ecr_exists == 'false'
+    runs-on: ubuntu-latest'
+    needs: [check-ecr]
 
     steps:
       - name: Checkout repository
@@ -91,15 +96,15 @@ jobs:
         working-directory: ./terraform-ecr
 
   call-docker-workflow:
-      needs: [check-ecr, deploy-ecr]
-      if: needs.check-ecr.outputs.ecr_exists == 'false'
+      needs: [check-ecr]
+      if: needs.check-ecr.outputs.ecr_exists == 'false' ||  ${{ inputs.build_image }} == 'true'
       uses: ./.github/workflows/docker.yml
       secrets: inherit
       with: 
         destroy: false
          
   deploy-ecs:
-    needs: [check-ecr, deploy-ecr, call-docker-workflow]
+    needs: [deploy-ecr]
     environment: Production
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev'  # Optional, for clarity
@@ -120,7 +125,7 @@ jobs:
           
       - name: Terraform Init
         run: terraform init
-        working-directory: ./terraform-ecr
+        working-directory: ./terraform-ecs
 
       - name: Terraform Apply
         run: |
@@ -135,4 +140,4 @@ jobs:
           if [ "$DESTROY" == "true" ]; then
             terraform destroy -auto-approve
           fi
-        working-directory: ./terraform-ecr
+        working-directory: ./terraform-ecs
