--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -33,30 +33,30 @@ on:
         default: false
 
 jobs:
-  check-ecr:
-    environment: Production
-    runs-on: ubuntu-latest
-    outputs:
-      ecr_exists: ${{ steps.check-ecr.outputs.exists }}
-    steps:
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ vars.AWS_REGION }}
+  # check-ecr:
+  #   environment: Production
+  #   runs-on: ubuntu-latest
+  #   outputs:
+  #     ecr_exists: ${{ steps.check-ecr.outputs.exists }}
+  #   steps:
+  #   - name: Configure AWS credentials
+  #     uses: aws-actions/configure-aws-credentials@v1
+  #     with:
+  #       aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  #       aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  #       aws-region: ${{ vars.AWS_REGION }}
 
-    - name: Check if ECR repository exists
-      id: check-ecr
-      run: |
-        if aws ecr describe-repositories --repository-names fusion > /dev/null 2>&1; then
-          echo "repo exists"
-          echo "exists=true" >> $GITHUB_OUTPUT
-        else
-          echo "repo does not exist"
-          echo "exists=false" >> $GITHUB_OUTPUT
-        fi
-        echo "$GITHUB_OUTPUT"
+  #   - name: Check if ECR repository exists
+  #     id: check-ecr
+  #     run: |
+  #       if aws ecr describe-repositories --repository-names fusion > /dev/null 2>&1; then
+  #         echo "repo exists"
+  #         echo "exists=true" >> $GITHUB_OUTPUT
+  #       else
+  #         echo "repo does not exist"
+  #         echo "exists=false" >> $GITHUB_OUTPUT
+  #       fi
+  #       echo "$GITHUB_OUTPUT"
   
   deploy-ecr:
     environment: Production
@@ -65,7 +65,6 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     runs-on: ubuntu-latest'
-    needs: [check-ecr]
 
     steps:
       - name: Checkout repository
@@ -95,13 +94,52 @@ jobs:
           fi
         working-directory: ./terraform-ecr
 
-  call-docker-workflow:
-      needs: [check-ecr]
-      if: needs.check-ecr.outputs.ecr_exists == 'false' ||  ${{ inputs.build_image }} == 'true'
-      uses: ./.github/workflows/docker.yml
-      secrets: inherit
-      with: 
-        destroy: false
+  build-and-push-image:
+    environment: Production
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      # id-token: write
+
+    env:
+      AWS_REGION: ${{ vars.AWS_REGION }}
+      REPOSITORY: fusion
+      ECR_REPO_URI: 471230323408.dkr.ecr.us-west-2.amazonaws.com/fusion
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      - name: Login to Amazon ECR
+        uses: aws-actions/amazon-ecr-login@v1
+
+      - name: Build Docker Image
+        id: build_image
+        run: |
+          if [ "${{ github.ref }}" == "refs/heads/main" ]; then
+            cd docker  # Remove if Dockerfile is in root
+            IMAGE_TAG=${{ github.sha }}
+            docker build -t $ECR_REPO_URI:$IMAGE_TAG .
+            echo "image_tag=$IMAGE_TAG" >> $GITHUB_OUTPUT
+          fi
+      - name: Tag Docker Image for ECR
+        run: |
+          if [ "${{ github.ref }}" == "refs/heads/main" ]; then
+            docker tag $ECR_REPO_URI:${{ github.sha }}  $ECR_REPO_URI:latest
+          fi
+      - name: Push Docker Image to ECR
+        run: |
+          if [ "${{ github.ref }}" == "refs/heads/main" ]; then
+            docker push $ECR_REPO_URI:${{ github.sha }}
+            docker push $ECR_REPO_URI:latest
+          fi
          
   deploy-ecs:
     needs: [deploy-ecr]
