--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -64,7 +64,7 @@ jobs:
       TF_VERSION: 1.12.2
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-    runs-on: ubuntu-latest'
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
