--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -85,12 +85,11 @@ jobs:
           terraform plan -out=tfplan -input=false
           
           # If on main branch, run apply
-          if [ "${{ github.ref }}" == "refs/heads/dev" ]; then
+          if [ "${{ inputs.destroy }}" == "true" ]; then
+            terraform destroy -auto-approve
+          elseif [ "${{ github.ref }}" == "refs/heads/dev" ]; then
             # Apply only if on main
             terraform apply -input=false -auto-approve tfplan
-          fi
-          if [ "$DESTROY" == "true" ]; then
-            terraform destroy -auto-approve
           fi
         working-directory: ./terraform-ecr
 
@@ -172,11 +171,10 @@ jobs:
           terraform plan -out=tfplan -input=false
           
           # If on main branch, run apply
-          if [ "${{ github.ref }}" == "refs/heads/dev" ]; then
+          if [ "${{ inputs.destroy }}" == "true" ]; then
+            terraform destroy -auto-approve
+          elseif [ "${{ github.ref }}" == "refs/heads/dev" ]; then
             # Apply only if on main
             terraform apply -input=false -auto-approve tfplan
-          fi
-          if [ "$DESTROY" == "true" ]; then
-            terraform destroy -auto-approve
           fi
         working-directory: ./terraform-ecs
